movie detail wip

--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,12 @@ body {
 #root {
   height: 100%;
 }
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
